feat: added migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=eventsphere
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migration=true
