added local profile to application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migration=true
+
+spring.profiles.active=local
+server.port=6969
